# M2

./: .codespell_ignore  CLAUDE.md  DocumentationGuide.md  DocumentationPlan.md  DocumentationStyleGuide.md  README.md
M2/: README.md
M2/Macaulay2/e/: BasicPoly.hpp  BasicPolyList.cpp  BasicPolyList.hpp  BasicPolyListParser.cpp  BasicPolyListParser.hpp  CMakeLists.txt  Eschreyer.cpp  Eschreyer.hpp  ExponentList.cpp  ExponentVector.hpp  GF.cpp  LLL.cpp  LLL.hpp  M2FreeAlgebra.cpp  M2FreeAlgebra.hpp  M2FreeAlgebraQuotient.cpp  M2FreeAlgebraQuotient.hpp  Makefile.common.in  Makefile.files.in  Makefile.in  MemoryBlock.hpp  NAG.cpp  NAG.hpp  Polynomial.hpp  README.md  SLP.hpp  VectorArithmetic.hpp  ZZ.cpp  ZZp.cpp  assprime.hpp  buffer.cpp  buffer.hpp  coeffrings.hpp  comb.hpp  comp-gb-declared.cpp  comp-res.cpp  computeGV.cpp  computeGV.hpp  cra.cpp  cra.hpp  (+94 more)
M2/Macaulay2/e/NAG/: NAG.cpp  NAG.hpp
M2/Macaulay2/e/NCAlgebras/: FreeAlgebra.cpp  FreeAlgebra.hpp  FreeAlgebraQuotient.cpp  FreeAlgebraQuotient.hpp  FreeMonoid.hpp  NCF4.cpp  NCF4.hpp  NCGroebner.cpp  NCGroebner.hpp  NCReduction.cpp  NCReduction.hpp  OverlapTable.hpp  Range.hpp  SuffixTree.hpp  Word.hpp  WordTable.hpp
M2/Macaulay2/e/NCResolutions/: nc-res-computation.hpp
M2/Macaulay2/e/Rings/: ZZ.cpp  ZZp.cpp  frac.cpp  localring.cpp  localring.hpp  poly.cpp  polyquotient.cpp  qring.cpp  ring.hpp  skewpoly.cpp  solvable.cpp  weylalg.cpp  weylalg.hpp
M2/Macaulay2/e/SLP/: SLP-defs.hpp  SLP-imp.hpp  SLP.hpp
M2/Macaulay2/e/Schur/: schur.cpp  schurSn.cpp
M2/Macaulay2/e/basic-mutable-matrices/: dmat-gf-flint-big.hpp  dmat-gf-flint.hpp  dmat-lu-inplace.hpp  dmat-lu-qq.hpp  dmat-lu.hpp  dmat-qq-flint.hpp  dmat-qq-interface-flint.hpp  dmat-zz-flint.hpp  dmat-zzp-flint.hpp  dmat.cpp  dmat.hpp  lapack.cpp  lapack.hpp  mat-arith.hpp  mat-elem-ops.hpp  mat-linalg.hpp  mat-util.hpp  mat.cpp  mat.hpp  smat.hpp
M2/Macaulay2/e/basic-rings/: aring-CC.cpp  aring-CC.hpp  aring-CCC.cpp  aring-CCC.hpp  aring-CCi.cpp  aring-CCi.hpp  aring-GF-flint-big.cpp  aring-GF-flint-big.hpp  aring-GF-flint.cpp  aring-GF-flint.hpp  aring-QQ-flint.cpp  aring-QQ-flint.hpp  aring-QQ-gmp.cpp  aring-QQ-gmp.hpp  aring-QQ.hpp  aring-RR.cpp  aring-RR.hpp  aring-RRR.cpp  aring-RRR.hpp  aring-RRi.cpp  aring-RRi.hpp  aring-ZZ-flint.cpp  aring-ZZ-flint.hpp  aring-ZZ-gmp.cpp  aring-ZZ-gmp.hpp  aring-ZZp-ffpack.cpp  aring-ZZp-ffpack.hpp  aring-ZZp-flint.cpp  aring-ZZp-flint.hpp  aring-ZZp.cpp  aring-ZZp.hpp  aring-gf-flint-big.cpp  aring-gf-flint.cpp  aring-glue.hpp  aring-m2-GF.cpp  aring-m2-GF.hpp  aring-m2-gf.cpp  aring-qq-flint.cpp  aring-qq-gmp.cpp  aring-qq.hpp  (+15 more)
M2/Macaulay2/e/bibasis/: allocator.cpp  allocator.hpp  bibasis.cpp  involutive.hpp  janettree.hpp  launcher.cpp  launcher.hpp  monom.cpp  monom.hpp  monomDL.cpp  monomDL.hpp  monomDRL.cpp  monomDRL.hpp  monomLex.cpp  monomLex.hpp  pcomparator.hpp  polynom.hpp  qset.hpp  settings-manager.cpp  settings-manager.hpp  triple.hpp  tset.hpp
M2/Macaulay2/e/coefficientrings/: aring-CC.cpp  aring-CC.hpp  aring-CCC.cpp  aring-CCC.hpp  aring-CCi.cpp  aring-CCi.hpp  aring-RR.cpp  aring-RR.hpp  aring-RRR.cpp  aring-RRR.hpp  aring-RRi.cpp  aring-RRi.hpp  aring-gf-flint-big.cpp  aring-gf-flint-big.hpp  aring-gf-flint.cpp  aring-gf-flint.hpp  aring-glue.hpp  aring-m2-gf.cpp  aring-m2-gf.hpp  aring-qq-flint.cpp  aring-qq-flint.hpp  aring-qq-gmp.cpp  aring-qq-gmp.hpp  aring-qq.hpp  aring-tower.cpp  aring-tower.hpp  aring-translate.hpp  aring-wrap.cpp  aring-wrap.hpp  aring-zz-flint.cpp  aring-zz-flint.hpp  aring-zz-gmp.cpp  aring-zz-gmp.hpp  aring-zzp-ffpack.cpp  aring-zzp-ffpack.hpp  aring-zzp-flint.cpp  aring-zzp-flint.hpp  aring-zzp.cpp  aring-zzp.hpp  aring.cpp
M2/Macaulay2/e/computations/: BRP-gb.cpp  BRP-interface.cpp  BRP-test.cpp  BRP.cpp  Eschreyer.cpp  Eschreyer.hpp  LLL.cpp  LLL.hpp  assprime.cpp  assprime.hpp  comp.cpp  comp.hpp  det.cpp  det.hpp  ntl-debugio.cpp  ntl-interface.cpp  ntl-interface.hpp  ntl-internal.cpp  pfaff.cpp  pfaff.hpp
M2/Macaulay2/e/cytools/: README.md  computeGV.cpp  cone-interior-point.cpp  cone-interior-point.hpp  lattice-points-normaliz.hpp  lattice_points.cpp  lattice_points.hpp
M2/Macaulay2/e/f4/: f4-computation.cpp  f4-computation.hpp  f4-m2-interface.cpp  f4-m2-interface.hpp  f4-monlookup.hpp  f4-spairs.hpp  f4-types.hpp  f4.cpp  f4.hpp  hilb-fcn.cpp  hilb-fcn.hpp  memblock.hpp  monhashtable.hpp  moninfo.cpp  moninfo.hpp  ntuple-monomial.hpp  varpower-monomial.hpp
M2/Macaulay2/e/free-modules/: freemod.cpp  freemod.hpp  schorder.cpp  schreyer-orders.cpp  schreyer-orders.hpp
M2/Macaulay2/e/gb-f4/: Basis.cpp  Basis.hpp  GBF4Computation.cpp  GBF4Computation.hpp  GBF4Interface.cpp  GBF4Interface.hpp  MacaulayMatrix.hpp  MonomialHashTable.cpp  MonomialHashTable.hpp  MonomialLookupTable.cpp  MonomialLookupTable.hpp  MonomialTypes.hpp  MonomialView.cpp  MonomialView.hpp  PolynomialList.cpp  PolynomialList.hpp  SPairs.hpp
M2/Macaulay2/e/groebner-computations/: comp-gb-declared.cpp  comp-gb-declared.hpp  comp-gb-proxy.cpp  comp-gb-proxy.hpp  comp-gb.cpp  comp-gb.hpp  gb-default.cpp  gb-default.hpp  gb-homog2.cpp  gb-homog2.hpp  gb-sugarless.cpp  gb-sugarless.hpp  gb-toric.cpp  gb-toric.hpp  gb-walk.cpp  gb-walk.hpp  gbring.cpp  gbring.hpp  gbweight.cpp  gbweight.hpp  reducedgb-ZZ.cpp  reducedgb-ZZ.hpp  reducedgb-field-local.cpp  reducedgb-field-local.hpp  reducedgb-field.cpp  reducedgb-field.hpp  reducedgb-marked.cpp  reducedgb-marked.hpp  reducedgb.cpp  reducedgb.hpp  sagbi.cpp  sagbi.hpp  spair.cpp  spair.hpp
M2/Macaulay2/e/interface/: NAG.h  aring.cpp  aring.h  computation.h  cone.cpp  cone.h  cra.cpp  cra.h  factory.cpp  factory.h  flint.h  freemodule.cpp  freemodule.h  gmp-util.h  groebner.cpp  groebner.h  m2-mem.cpp  m2-mem.h  m2-types.cpp  m2-types.h  matrix.cpp  matrix.h  monoid.cpp  monoid.h  monomial-ideal.cpp  monomial-ideal.h  monomial-ordering.cpp  monomial-ordering.h  mutable-matrix.cpp  mutable-matrix.h  polyroots.cpp  random.h  ring.cpp  ring.h  ringelement.cpp  ringelement.h  ringmap.cpp  ringmap.h
M2/Macaulay2/e/issues/: TODO-rings-matrices
(+204 files in other folders)
